default.css
/* ... */
.navMenuOption:hover {
    background: var(--deftraback) !important;
    border-right-color: var(--accent);
}


/*Episode cards*/

.listItem[data-type=Audio] .mediaInfoItem::after {
    display: none !important;
}

.listItem[data-type=Audio] .listItem-indexnumberleft {
    padding-left: 5px;
}

#itemDetailPage .vertical-list {
    display: grid;
    grid-template-columns: 20% 20% 20% 20% 20%;
    padding: 0 6px !important;
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    justify-content: space-evenly;
    -webkit-box-orient: horizontal;
    margin: -6px;
    width: calc(100% - 6px);
}

.listItem-withContentWrapper:hover .listItemImageButton.itemAction.paper-icon-button-light {
    opacity: 100%;
}

@media (max-width: 901px) {
    #itemDetailPage .vertical-list {
        grid-template-columns: 30% 30% 30%;
    }
}

.listItem-withContentWrapper {
    transition: none;
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
    max-width: 100%;
    margin: 6px;
    border-radius: var(--rounding);
    overflow: hidden;
    padding: 0;
    overflow: hidden;
}

.listItem-withContentWrapper:hover {
    background: transparent;
}

.listItem-content {
    height: 100%;
}

.listItem-content {
    display: flex;
    align-items: center;
    width: 100%;
    display: grid;
    grid-template-columns: 100%;
}

.listItemImage.listItemImage-large.itemAction.lazy {
    height: 14rem;
    width: 100%;
    padding: 0 !important;
    margin: 0 !important;
    top: 0;
    left: 0;
}

.layout-mobile #itemDetailPage .vertical-list {
    grid-template-columns: 100%;
}

.secondary.listItem-overview.listItemBodyText {
    height: -webkit-fit-content;
    height: -moz-fit-content;
    height: fit-content;
}

.layout-mobile .listItem-bottomoverview {
    padding: 0 10px;
}

.listItemBody.itemAction {
    padding: 0 5px;
}

.card[data-type=CollectionFolder] .cardText {
    height: 3rem;
}

.defaultCardBackground {
    background: var(--deftraback) !important;
}

#itemDetailPage::-webkit-scrollbar-track-piece {
    background: #181818;
}

.listItemImageButton.itemAction.paper-icon-button-light {
    opacity: 0;
    color: var(--accent);
    transition: all .2s;
}

.layout-mobile .listItemImageButton.itemAction.paper-icon-button-light {
    opacity: 100% !important;
}


/* My Media Styling */

.section0 button.itemAction.textActionButton {
    height: 3.5em;
    background: rgba(0, 0, 0, 0);
    border-radius: var(--rounding);
}

.section0 .overflowBackdropCard,
.section0 .overflowSmallBackdropCard {
    max-width: 90vw;
}

.section0 .emby-scroller {
    margin-right: 0;
}

.section0 .itemsContainer {
    flex-wrap: wrap;
}

@media (max-width: 1px) and (orientation: landscape) {
    .section0 {
        display: none;
    }
}

.section0 .sectionTitle {
    padding-top: 60px !important;
}

@media (max-width: 1px) {
    .section0 {
        display: none;
    }
}

.section0 .sectionTitle {
    padding-top: 60px !important;
}

.raised.homeLibraryButton:hover {
    transition: -webkit-filter 1s;
    transition: filter 1s;
    transition: filter 1s, -webkit-filter 1s;
}

.raised.homeLibraryButton {
    transition: -webkit-filter 1s;
    transition: filter 1s;
    transition: filter 1s, -webkit-filter 1s;
}

.homeLibraryButton {
    min-width: 12em;
    margin: 0.4em;
}


/*Theming for the dasboard*/

.paperList,
.visualCardBox {
    background-color: #000;
    border-radius: 5px;
}

.listItemIcon {
    border-radius: 5px !important;
}

.listItemIcon:not(.listItemIcon-transparent) {
    background-color: transparent !important;
    color: var(--accent);
}

.listItem-border {
    border-color: transparent !important;
}

.backgroundContainer {
    background-color: #101010;
}

.raised {
    background: var(--accent);
}

.headerButton.headerButtonRight.paper-icon-button-light.headerUserButtonRound {
    border-radius: var(--rounding) !important;
}


/*For browsers that don't support backdrop-filter*/

@supports not ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
    .videoOsdBottom {
        background-color: rgba(0, 0, 0, .95);
    }
    .osdHeader {
        background: rgba(0, 0, 0, 0.95) !important;
    }
    .skinHeader.focuscontainer-x.skinHeader-withBackground.skinHeader-blurred {
        background-color: rgba(0, 0, 0, 0);
    }
    .tmla-mask {
        background-color: rgba(0, 0, 0, 0.1);
    }
    .dialogBackdropOpened {
        opacity: 1 !important;
        background: rgba(0, 0, 0, 0.1);
    }
    .dialog {
        background-color: rgba(0, 0, 0, 0.95) !important;
        box-shadow: 0 0 20px 4px black;
    }
    .mainDrawer {
        background-color: rgba(0, 0, 0, 0.95);
        box-shadow: none;
    }
    .playerStats {
        background: rgba(28, 28, 28, .8);
        box-shadow: 0 0 8px black !important;
    }
    /*Theming Playback data info*/
    .playerStats {
        background: rgba(0, 0, 0, 0.1);
        backdrop-filter: blur(90px);
        -webkit-backdrop-filter: blur(90px);
        box-shadow: 0 0 8px black;
    }
}

